# Tailscale-OHOS

./: .gitignore  README.md  build-profile.example.json5  oh-package.json5  package.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
certs/release/: Tailscale OHOS Release.cer  Tailscale OHOS.cer  Tailscale-OHOS-Release-Chain.cer
docs/: harmonyos-ui-design-system.md  taildrop-technical-plan.md
entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libtailscale_ohos/: index.d.ts  oh-package.json5
entry/src/main/ets/components/: BridgeStatus.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/services/: AppLifecycleEvents.ets  ControlServerConfig.ets  DeviceNameService.ets  DiagnosticEventStore.ets  DiagnosticReportService.ets
entry/src/main/ets/vpnextensionability/: TailscaleVpnExtensionAbility.ets
hvigor/: hvigor-config.json5
native/go_bridge/: backend.go  backend_test.go  control_probe.go  go.mod  go.sum  harmony_tun.go  main.go  tun_probe.go
native/go_bridge/vpnroute/: routes.go  routes_test.go
patches/: ohos-go-interface-resources.patch  tailscale-ohos.patch
scripts/: build-go.ps1  build.ps1  device-backend-probe.ps1  device-engine-probe.ps1  device-exit-node-probe.ps1  device-user-ui-probe.ps1  device-vpn-data-probe.ps1  extract-harmony-design-docs.py  set-windows-forwarding.ps1  subnet-test-server.ps1  verify-artifacts.ps1
(+4 files in other folders)
